--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="menu_movie">Movie</string>
     <string name="menu_tv">Tv</string>
     <string name="menu_person">Person</string>
+    <string name="top_rated">Top Rated</string>
     <string name="reviews">Reviews</string>
     <string name="summary">Summary</string>
     <string name="trailers">Trailers</string>
